--- a/src/main/resources/assets/morebuckets/lang/en_us.json
+++ b/src/main/resources/assets/morebuckets/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "item.morebuckets.wooden_bucket": "Wooden Bucket",
-  "item.morebuckets.wooden_bucket_water": "Wooden Bucket of Water",
+  "item.morebuckets.water_wooden_bucket": "Wooden Bucket of Water",
   "itemGroup.m_buckets": "More Buckets"
 }
