--- a/src/main/resources/assets/morebuckets/lang/zh_cn.json
+++ b/src/main/resources/assets/morebuckets/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
   "item.morebuckets.wooden_bucket": "木桶",
-  "item.morebuckets.wooden_bucket_water": "装着水的木桶",
+  "item.morebuckets.water_wooden_bucket": "装着水的木桶",
   "itemGroup.m_buckets": "更多的桶"
 }
